<resources>
    <string name="app_name">Classic Application</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="city">City</string>
    <string name="blood_group">Blood Group</string>
    <string name="password">Password</string>
    <string name="Register">REGISTER</string>
    <string name="already_registered">Already Registered?</string>
    <string name="Login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_user">Welcome User</string>
    <string name="mobile_number">Mobile Number</string>
</resources>
